# OpenStudio-HPXML-Calibration

./: .gitignore  .pre-commit-config.yaml  README.md  bills_playground.py  calibrate_playground.py  mkdocs.yml  pyproject.toml  ruff.toml  search_algorithm_playground.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml
docs/: index.md  inputs.md  usage.md
sample_files/: house01.xml  house02.xml  house03.xml  house04.xml  house05.xml  house06.xml  house07.xml  house08.xml  house09.xml  house10.xml  house11.xml  house12.xml  house13.xml  house14.xml  house15.xml  house16.xml  house17.xml  house18.xml  house19.xml  house20.xml  house21.xml  house22.xml  house23.xml  house24.xml  house25.xml  house26.xml  house27.xml  house28.xml  house29.xml  house30.xml  house31.xml  house32.xml  house33.xml  house34.xml  house35.xml  house36.xml  house37.xml  house38.xml  house39.xml  house40.xml  (+50 more)
sample_files/dataset_5/: 10039.xml  10043.xml  10233.xml  10366.xml  10729.xml  15242.xml  15411.xml  15413.xml  15419.xml  15437.xml
sample_files/dataset_6/: clean_om_sample_100.xml  clean_om_sample_1007.xml  clean_om_sample_1009.xml  clean_om_sample_1010.xml  clean_om_sample_1011.xml  clean_om_sample_1016.xml  clean_om_sample_1020.xml  clean_om_sample_1022.xml  clean_om_sample_2289.xml  clean_om_sample_2290.xml
sample_files/dataset_7/: jid-100005_cid-4179_pid-5_v-220_nopii.xml  jid-100041_cid-4065_pid-32_v-220_nopii.xml  jid-100125_cid-2651_pid-5_v-220_nopii.xml  jid-100127_cid-4132_pid-5_v-220_nopii.xml  jid-100350_cid-4179_pid-5_v-220_nopii.xml  jid-100745_cid-3981_pid-5_v-220_nopii.xml  jid-100892_cid-4179_pid-5_v-220_nopii.xml  jid-101006_cid-4179_pid-5_v-220_nopii.xml  jid-101026_cid-4179_pid-5_v-220_nopii.xml  jid-101054_cid-4179_pid-5_v-230_nopii.xml
src/openstudio_hpxml_calibration/: __init__.py  calibrate.py  config.yaml  default_calibration_config.yaml  default_ga_config.yaml  enums.py  ga_config.yaml  hpxml.py  main.py  modify_hpxml.py  units.py  utils.py
test_hpxmls/: 1_electricity_ashp.xml  2_electricity_electric_furnace.xml  3_natural_gas_fuel_furnace.xml  4_natural_gas_fuel_furnace.xml  5_fuel_oil_fuel_furnace.xml  6_propane_fuel_furnace.xml
test_hpxmls/ihmh_homes/: ihmh1.xml  ihmh2.xml  ihmh3.xml  ihmh4.xml  ihmh5.xml  ihmh6.xml  ihmh7.xml  ihmh8.xml
test_hpxmls/invalid_homes/: bad_building_idref.xml  consumption_date_future.xml  consumption_date_gap.xml  consumption_date_long.xml  consumption_date_missing_end.xml  consumption_date_missing_start.xml  consumption_date_overlapping.xml  consumption_date_past.xml  consumption_date_range_invalid.xml  consumption_date_short.xml  consumption_electricity_missing.xml  consumption_few_periods.xml  consumption_few_periods2.xml  consumption_missing.xml  consumption_multiple.xml  consumption_natgas_missing.xml  consumption_negative.xml  consumption_reading_type_estimate.xml  consumption_unordered.xml  pv_system.xml  (+7 more)
tests/: conftest.py  logbook.json  post_process.py  search_results.json  test_calibrate.py  test_cli.py  test_degree_days.py  test_hpxmls.py  test_weather_normalization.py
utils/: post_process.py
(+131 files in other folders)
