[project]
name = "openstudio-hpxml-calibration"
version = "0.1.0"
description = "Calibrates a building energy model to utility bills."
readme = "README.md"
authors = [
    { name = "Noel Merket", email = "noel.merket@nrel.gov" },
    { name = "Nathan Moore", email = "nathan.moore@nrel.gov" }
]
requires-python = ">=3.12, < 3.14"
dependencies = [
    "cyclopts>=3.4.0",
    "eeweather>=0.3.29",
    "geopy>=2.4.1",
    "lxml>=5.3.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

[project.scripts]
openstudio-hpxml-calibration = "openstudio_hpxml_calibration:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/openstudio_hpxml_calibration"]
include = [
    "src/OpenStudio-HPXML/**",
]
